--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "react-helmet-async": "^2.0.5",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.6.0",
+    "react-toastify": "^11.0.5",
     "simplebar-react": "^3.3.0",
     "socket.io-client": "^4.8.1",
     "swiper": "^11.2.3",
