--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "flatpickr": "^4.6.13",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.510.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
