--- a/backend/.env
+++ b/backend/.env
@@ -2,5 +2,8 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=
 DB_NAME=db_buku-tamu
+
 JWT_SECRET=secret_key
+
 UINSU_API_KEY=afd39774e1ac4dd13e4cb452725b396a
+UINSU_API_URL=https://ws.uinsu.ac.id/portal
