--- a/backend/.env
+++ b/backend/.env
@@ -5,5 +5,6 @@ DB_NAME=db_buku-tamu
 
 JWT_SECRET=secret_key
 
-UINSU_API_KEY=afd39774e1ac4dd13e4cb452725b396a
-UINSU_API_URL=https://ws.uinsu.ac.id/portal
+UINSU_API_KEY=8eac5e845550b95796c4c955d1ddec6a
+UINSU_API_PORTAL=https://ws.uinsu.ac.id/portal
+UINSU_API_BIMA=https://ws.uinsu.ac.id/bima
